# messenger-cli-client

./: CMakeLists.txt  README.md
source/: Init.c
source/Services/: AuthService.c  AuthService.h  ConnectService.c  ConnectService.h  MessageService.c  MessageService.h  RunService.c  RunService.h  TimeService.c  TimeService.h  UserEntety.c  UserEntety.h
